// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`checkboxGroup > renders with ariaLabel correctly 1`] = `
"<div tabindex="0" data-orientation="vertical" dir="ltr" style="outline-color: none; outline-style: none; outline-width: initial;" id="v-0-0" data-pohon="checkbox-group-root" aria-label="Aria label">
  <fieldset data-pohon="checkbox-group-fieldset">
    <!--v-if-->
    <div class="" data-pohon="checkbox-root">
      <div class="" data-pohon="checkbox-container"><button tabindex="-1" data-orientation="vertical" data-pohon="checkbox-base" id="v-0-0:1" role="checkbox" type="button" aria-checked="false" aria-required="false" data-state="unchecked" data-akar-collection-item="">
          <!---->
          <!--v-if-->
        </button></div>
      <div class="" data-pohon="checkbox-wrapper"><label for="v-0-0:1" class="" data-pohon="checkbox-label">Option 1</label>
        <!--v-if-->
      </div>
    </div>
    <div class="" data-pohon="checkbox-root">
      <div class="" data-pohon="checkbox-container"><button tabindex="-1" data-orientation="vertical" data-pohon="checkbox-base" id="v-0-0:2" role="checkbox" type="button" aria-checked="false" aria-required="false" data-state="unchecked" data-akar-collection-item="">
          <!---->
          <!--v-if-->
        </button></div>
      <div class="" data-pohon="checkbox-wrapper"><label for="v-0-0:2" class="" data-pohon="checkbox-label">Option 2</label>
        <!--v-if-->
      </div>
    </div>
    <div class="" data-pohon="checkbox-root">
      <div class="" data-pohon="checkbox-container"><button tabindex="-1" data-orientation="vertical" data-pohon="checkbox-base" id="v-0-0:3" role="checkbox" type="button" aria-checked="false" aria-required="false" data-state="unchecked" data-akar-collection-item="">
          <!---->
          <!--v-if-->
        </button></div>
      <div class="" data-pohon="checkbox-wrapper"><label for="v-0-0:3" class="" data-pohon="checkbox-label">Option 3</label>
        <!--v-if-->
      </div>
    </div>
  </fieldset>
  <!--v-if-->
</div>"
`;

exports[`checkboxGroup > renders with as correctly 1`] = `
"<section tabindex="0" data-orientation="vertical" dir="ltr" style="outline-color: none; outline-style: none; outline-width: initial;" id="v-0-0" data-pohon="checkbox-group-root">
  <fieldset data-pohon="checkbox-group-fieldset">
    <!--v-if-->
    <div class="" data-pohon="checkbox-root">
      <div class="" data-pohon="checkbox-container"><button tabindex="-1" data-orientation="vertical" data-pohon="checkbox-base" id="v-0-0:1" role="checkbox" type="button" aria-checked="false" aria-required="false" data-state="unchecked" data-akar-collection-item="">
          <!---->
          <!--v-if-->
        </button></div>
      <div class="" data-pohon="checkbox-wrapper"><label for="v-0-0:1" class="" data-pohon="checkbox-label">Option 1</label>
        <!--v-if-->
      </div>
    </div>
    <div class="" data-pohon="checkbox-root">
      <div class="" data-pohon="checkbox-container"><button tabindex="-1" data-orientation="vertical" data-pohon="checkbox-base" id="v-0-0:2" role="checkbox" type="button" aria-checked="false" aria-required="false" data-state="unchecked" data-akar-collection-item="">
          <!---->
          <!--v-if-->
        </button></div>
      <div class="" data-pohon="checkbox-wrapper"><label for="v-0-0:2" class="" data-pohon="checkbox-label">Option 2</label>
        <!--v-if-->
      </div>
    </div>
    <div class="" data-pohon="checkbox-root">
      <div class="" data-pohon="checkbox-container"><button tabindex="-1" data-orientation="vertical" data-pohon="checkbox-base" id="v-0-0:3" role="checkbox" type="button" aria-checked="false" aria-required="false" data-state="unchecked" data-akar-collection-item="">
          <!---->
          <!--v-if-->
        </button></div>
      <div class="" data-pohon="checkbox-wrapper"><label for="v-0-0:3" class="" data-pohon="checkbox-label">Option 3</label>
        <!--v-if-->
      </div>
    </div>
  </fieldset>
  <!--v-if-->
</section>"
`;

exports[`checkboxGroup > renders with class correctly 1`] = `
"<div tabindex="0" data-orientation="vertical" dir="ltr" style="outline-color: none; outline-style: none; outline-width: initial;" id="v-0-0" class="absolute" data-pohon="checkbox-group-root">
  <fieldset data-pohon="checkbox-group-fieldset">
    <!--v-if-->
    <div class="" data-pohon="checkbox-root">
      <div class="" data-pohon="checkbox-container"><button tabindex="-1" data-orientation="vertical" data-pohon="checkbox-base" id="v-0-0:1" role="checkbox" type="button" aria-checked="false" aria-required="false" data-state="unchecked" data-akar-collection-item="">
          <!---->
          <!--v-if-->
        </button></div>
      <div class="" data-pohon="checkbox-wrapper"><label for="v-0-0:1" class="" data-pohon="checkbox-label">Option 1</label>
        <!--v-if-->
      </div>
    </div>
    <div class="" data-pohon="checkbox-root">
      <div class="" data-pohon="checkbox-container"><button tabindex="-1" data-orientation="vertical" data-pohon="checkbox-base" id="v-0-0:2" role="checkbox" type="button" aria-checked="false" aria-required="false" data-state="unchecked" data-akar-collection-item="">
          <!---->
          <!--v-if-->
        </button></div>
      <div class="" data-pohon="checkbox-wrapper"><label for="v-0-0:2" class="" data-pohon="checkbox-label">Option 2</label>
        <!--v-if-->
      </div>
    </div>
    <div class="" data-pohon="checkbox-root">
      <div class="" data-pohon="checkbox-container"><button tabindex="-1" data-orientation="vertical" data-pohon="checkbox-base" id="v-0-0:3" role="checkbox" type="button" aria-checked="false" aria-required="false" data-state="unchecked" data-akar-collection-item="">
          <!---->
          <!--v-if-->
        </button></div>
      <div class="" data-pohon="checkbox-wrapper"><label for="v-0-0:3" class="" data-pohon="checkbox-label">Option 3</label>
        <!--v-if-->
      </div>
    </div>
  </fieldset>
  <!--v-if-->
</div>"
`;

exports[`checkboxGroup > renders with defaultValue correctly 1`] = `
"<div tabindex="0" data-orientation="vertical" dir="ltr" style="outline-color: none; outline-style: none; outline-width: initial;" id="v-0-0" data-pohon="checkbox-group-root">
  <fieldset data-pohon="checkbox-group-fieldset">
    <!--v-if-->
    <div class="" data-pohon="checkbox-root">
      <div class="" data-pohon="checkbox-container"><button tabindex="-1" data-orientation="vertical" data-pohon="checkbox-base" id="v-0-0:1" role="checkbox" type="button" aria-checked="true" aria-required="false" data-state="checked" data-akar-collection-item=""><span data-state="checked" style="pointer-events: none;" class="" data-pohon="checkbox-indicator"><span class="iconify i-lucide:check" aria-hidden="true" data-pohon="checkbox-icon"></span></span>
          <!--v-if-->
        </button></div>
      <div class="" data-pohon="checkbox-wrapper"><label for="v-0-0:1" class="" data-pohon="checkbox-label">Option 1</label>
        <!--v-if-->
      </div>
    </div>
    <div class="" data-pohon="checkbox-root">
      <div class="" data-pohon="checkbox-container"><button tabindex="-1" data-orientation="vertical" data-pohon="checkbox-base" id="v-0-0:2" role="checkbox" type="button" aria-checked="false" aria-required="false" data-state="unchecked" data-akar-collection-item="">
          <!---->
          <!--v-if-->
        </button></div>
      <div class="" data-pohon="checkbox-wrapper"><label for="v-0-0:2" class="" data-pohon="checkbox-label">Option 2</label>
        <!--v-if-->
      </div>
    </div>
    <div class="" data-pohon="checkbox-root">
      <div class="" data-pohon="checkbox-container"><button tabindex="-1" data-orientation="vertical" data-pohon="checkbox-base" id="v-0-0:3" role="checkbox" type="button" aria-checked="false" aria-required="false" data-state="unchecked" data-akar-collection-item="">
          <!---->
          <!--v-if-->
        </button></div>
      <div class="" data-pohon="checkbox-wrapper"><label for="v-0-0:3" class="" data-pohon="checkbox-label">Option 3</label>
        <!--v-if-->
      </div>
    </div>
  </fieldset>
  <!--v-if-->
</div>"
`;

exports[`checkboxGroup > renders with description correctly 1`] = `
"<div tabindex="0" data-orientation="vertical" dir="ltr" style="outline-color: none; outline-style: none; outline-width: initial;" id="v-0-0" data-pohon="checkbox-group-root">
  <fieldset data-pohon="checkbox-group-fieldset">
    <!--v-if-->
    <div class="" data-pohon="checkbox-root">
      <div class="" data-pohon="checkbox-container"><button tabindex="-1" data-orientation="vertical" data-pohon="checkbox-base" id="v-0-0:1" role="checkbox" type="button" aria-checked="false" aria-required="false" data-state="unchecked" data-akar-collection-item="">
          <!---->
          <!--v-if-->
        </button></div>
      <div class="" data-pohon="checkbox-wrapper"><label for="v-0-0:1" class="" data-pohon="checkbox-label">Option 1</label>
        <p class="" data-pohon="checkbox-description">Description 0</p>
      </div>
    </div>
    <div class="" data-pohon="checkbox-root">
      <div class="" data-pohon="checkbox-container"><button tabindex="-1" data-orientation="vertical" data-pohon="checkbox-base" id="v-0-0:2" role="checkbox" type="button" aria-checked="false" aria-required="false" data-state="unchecked" data-akar-collection-item="">
          <!---->
          <!--v-if-->
        </button></div>
      <div class="" data-pohon="checkbox-wrapper"><label for="v-0-0:2" class="" data-pohon="checkbox-label">Option 2</label>
        <p class="" data-pohon="checkbox-description">Description 1</p>
      </div>
    </div>
    <div class="" data-pohon="checkbox-root">
      <div class="" data-pohon="checkbox-container"><button tabindex="-1" data-orientation="vertical" data-pohon="checkbox-base" id="v-0-0:3" role="checkbox" type="button" aria-checked="false" aria-required="false" data-state="unchecked" data-akar-collection-item="">
          <!---->
          <!--v-if-->
        </button></div>
      <div class="" data-pohon="checkbox-wrapper"><label for="v-0-0:3" class="" data-pohon="checkbox-label">Option 3</label>
        <p class="" data-pohon="checkbox-description">Description 2</p>
      </div>
    </div>
  </fieldset>
  <!--v-if-->
</div>"
`;

exports[`checkboxGroup > renders with description slot correctly 1`] = `
"<div tabindex="0" data-orientation="vertical" dir="ltr" style="outline-color: none; outline-style: none; outline-width: initial;" id="v-0-0" data-pohon="checkbox-group-root">
  <fieldset data-pohon="checkbox-group-fieldset">
    <!--v-if-->
    <div class="" data-pohon="checkbox-root">
      <div class="" data-pohon="checkbox-container"><button tabindex="-1" data-orientation="vertical" data-pohon="checkbox-base" id="v-0-0:1" role="checkbox" type="button" aria-checked="false" aria-required="false" data-state="unchecked" data-akar-collection-item="">
          <!---->
          <!--v-if-->
        </button></div>
      <div class="" data-pohon="checkbox-wrapper"><label for="v-0-0:1" class="" data-pohon="checkbox-label">Option 1</label>
        <p class="" data-pohon="checkbox-description">Description slot</p>
      </div>
    </div>
    <div class="" data-pohon="checkbox-root">
      <div class="" data-pohon="checkbox-container"><button tabindex="-1" data-orientation="vertical" data-pohon="checkbox-base" id="v-0-0:2" role="checkbox" type="button" aria-checked="false" aria-required="false" data-state="unchecked" data-akar-collection-item="">
          <!---->
          <!--v-if-->
        </button></div>
      <div class="" data-pohon="checkbox-wrapper"><label for="v-0-0:2" class="" data-pohon="checkbox-label">Option 2</label>
        <p class="" data-pohon="checkbox-description">Description slot</p>
      </div>
    </div>
    <div class="" data-pohon="checkbox-root">
      <div class="" data-pohon="checkbox-container"><button tabindex="-1" data-orientation="vertical" data-pohon="checkbox-base" id="v-0-0:3" role="checkbox" type="button" aria-checked="false" aria-required="false" data-state="unchecked" data-akar-collection-item="">
          <!---->
          <!--v-if-->
        </button></div>
      <div class="" data-pohon="checkbox-wrapper"><label for="v-0-0:3" class="" data-pohon="checkbox-label">Option 3</label>
        <p class="" data-pohon="checkbox-description">Description slot</p>
      </div>
    </div>
  </fieldset>
  <!--v-if-->
</div>"
`;

exports[`checkboxGroup > renders with descriptionKey correctly 1`] = `
"<div tabindex="0" data-orientation="vertical" dir="ltr" style="outline-color: none; outline-style: none; outline-width: initial;" id="v-0-0" data-pohon="checkbox-group-root">
  <fieldset data-pohon="checkbox-group-fieldset">
    <!--v-if-->
    <div class="" data-pohon="checkbox-root">
      <div class="" data-pohon="checkbox-container"><button tabindex="-1" data-orientation="vertical" data-pohon="checkbox-base" id="v-0-0:1" role="checkbox" type="button" aria-checked="false" aria-required="false" data-state="unchecked" data-akar-collection-item="">
          <!---->
          <!--v-if-->
        </button></div>
      <div class="" data-pohon="checkbox-wrapper"><label for="v-0-0:1" class="" data-pohon="checkbox-label">Option 1</label>
        <p class="" data-pohon="checkbox-description">1</p>
      </div>
    </div>
    <div class="" data-pohon="checkbox-root">
      <div class="" data-pohon="checkbox-container"><button tabindex="-1" data-orientation="vertical" data-pohon="checkbox-base" id="v-0-0:2" role="checkbox" type="button" aria-checked="false" aria-required="false" data-state="unchecked" data-akar-collection-item="">
          <!---->
          <!--v-if-->
        </button></div>
      <div class="" data-pohon="checkbox-wrapper"><label for="v-0-0:2" class="" data-pohon="checkbox-label">Option 2</label>
        <p class="" data-pohon="checkbox-description">2</p>
      </div>
    </div>
    <div class="" data-pohon="checkbox-root">
      <div class="" data-pohon="checkbox-container"><button tabindex="-1" data-orientation="vertical" data-pohon="checkbox-base" id="v-0-0:3" role="checkbox" type="button" aria-checked="false" aria-required="false" data-state="unchecked" data-akar-collection-item="">
          <!---->
          <!--v-if-->
        </button></div>
      <div class="" data-pohon="checkbox-wrapper"><label for="v-0-0:3" class="" data-pohon="checkbox-label">Option 3</label>
        <p class="" data-pohon="checkbox-description">3</p>
      </div>
    </div>
  </fieldset>
  <!--v-if-->
</div>"
`;

exports[`checkboxGroup > renders with disabled correctly 1`] = `
"<div tabindex="-1" data-orientation="vertical" dir="ltr" style="outline-color: none; outline-style: none; outline-width: initial;" id="v-0-0" data-pohon="checkbox-group-root">
  <fieldset data-pohon="checkbox-group-fieldset">
    <!--v-if-->
    <div class="" data-pohon="checkbox-root">
      <div class="" data-pohon="checkbox-container"><button tabindex="-1" data-orientation="vertical" data-disabled="" data-pohon="checkbox-base" id="v-0-0:1" role="checkbox" type="button" aria-checked="false" aria-required="false" data-state="unchecked" disabled="" data-akar-collection-item="">
          <!---->
          <!--v-if-->
        </button></div>
      <div class="" data-pohon="checkbox-wrapper"><label for="v-0-0:1" class="" data-pohon="checkbox-label">Option 1</label>
        <!--v-if-->
      </div>
    </div>
    <div class="" data-pohon="checkbox-root">
      <div class="" data-pohon="checkbox-container"><button tabindex="-1" data-orientation="vertical" data-disabled="" data-pohon="checkbox-base" id="v-0-0:2" role="checkbox" type="button" aria-checked="false" aria-required="false" data-state="unchecked" disabled="" data-akar-collection-item="">
          <!---->
          <!--v-if-->
        </button></div>
      <div class="" data-pohon="checkbox-wrapper"><label for="v-0-0:2" class="" data-pohon="checkbox-label">Option 2</label>
        <!--v-if-->
      </div>
    </div>
    <div class="" data-pohon="checkbox-root">
      <div class="" data-pohon="checkbox-container"><button tabindex="-1" data-orientation="vertical" data-disabled="" data-pohon="checkbox-base" id="v-0-0:3" role="checkbox" type="button" aria-checked="false" aria-required="false" data-state="unchecked" disabled="" data-akar-collection-item="">
          <!---->
          <!--v-if-->
        </button></div>
      <div class="" data-pohon="checkbox-wrapper"><label for="v-0-0:3" class="" data-pohon="checkbox-label">Option 3</label>
        <!--v-if-->
      </div>
    </div>
  </fieldset>
  <!--v-if-->
</div>"
`;

exports[`checkboxGroup > renders with horizontal variant card correctly 1`] = `
"<div tabindex="0" data-orientation="horizontal" dir="ltr" style="outline-color: none; outline-style: none; outline-width: initial;" id="v-0-0" data-pohon="checkbox-group-root">
  <fieldset data-pohon="checkbox-group-fieldset">
    <!--v-if--><label class="" data-pohon="checkbox-root">
      <div class="" data-pohon="checkbox-container"><button tabindex="-1" data-orientation="horizontal" data-pohon="checkbox-base" id="v-0-0:1" role="checkbox" type="button" aria-checked="true" aria-required="false" data-state="checked" data-akar-collection-item=""><span data-state="checked" style="pointer-events: none;" class="" data-pohon="checkbox-indicator"><span class="iconify i-lucide:check" aria-hidden="true" data-pohon="checkbox-icon"></span></span>
          <!--v-if-->
        </button></div>
      <div class="" data-pohon="checkbox-wrapper">
        <p for="v-0-0:1" class="" data-pohon="checkbox-label">Option 1</p>
        <!--v-if-->
      </div>
    </label><label class="" data-pohon="checkbox-root">
      <div class="" data-pohon="checkbox-container"><button tabindex="-1" data-orientation="horizontal" data-pohon="checkbox-base" id="v-0-0:2" role="checkbox" type="button" aria-checked="false" aria-required="false" data-state="unchecked" data-akar-collection-item="">
          <!---->
          <!--v-if-->
        </button></div>
      <div class="" data-pohon="checkbox-wrapper">
        <p for="v-0-0:2" class="" data-pohon="checkbox-label">Option 2</p>
        <!--v-if-->
      </div>
    </label><label class="" data-pohon="checkbox-root">
      <div class="" data-pohon="checkbox-container"><button tabindex="-1" data-orientation="horizontal" data-pohon="checkbox-base" id="v-0-0:3" role="checkbox" type="button" aria-checked="false" aria-required="false" data-state="unchecked" data-akar-collection-item="">
          <!---->
          <!--v-if-->
        </button></div>
      <div class="" data-pohon="checkbox-wrapper">
        <p for="v-0-0:3" class="" data-pohon="checkbox-label">Option 3</p>
        <!--v-if-->
      </div>
    </label>
  </fieldset>
  <!--v-if-->
</div>"
`;

exports[`checkboxGroup > renders with horizontal variant list correctly 1`] = `
"<div tabindex="0" data-orientation="horizontal" dir="ltr" style="outline-color: none; outline-style: none; outline-width: initial;" id="v-0-0" data-pohon="checkbox-group-root">
  <fieldset data-pohon="checkbox-group-fieldset">
    <!--v-if-->
    <div class="" data-pohon="checkbox-root">
      <div class="" data-pohon="checkbox-container"><button tabindex="-1" data-orientation="horizontal" data-pohon="checkbox-base" id="v-0-0:1" role="checkbox" type="button" aria-checked="true" aria-required="false" data-state="checked" data-akar-collection-item=""><span data-state="checked" style="pointer-events: none;" class="" data-pohon="checkbox-indicator"><span class="iconify i-lucide:check" aria-hidden="true" data-pohon="checkbox-icon"></span></span>
          <!--v-if-->
        </button></div>
      <div class="" data-pohon="checkbox-wrapper"><label for="v-0-0:1" class="" data-pohon="checkbox-label">Option 1</label>
        <!--v-if-->
      </div>
    </div>
    <div class="" data-pohon="checkbox-root">
      <div class="" data-pohon="checkbox-container"><button tabindex="-1" data-orientation="horizontal" data-pohon="checkbox-base" id="v-0-0:2" role="checkbox" type="button" aria-checked="false" aria-required="false" data-state="unchecked" data-akar-collection-item="">
          <!---->
          <!--v-if-->
        </button></div>
      <div class="" data-pohon="checkbox-wrapper"><label for="v-0-0:2" class="" data-pohon="checkbox-label">Option 2</label>
        <!--v-if-->
      </div>
    </div>
    <div class="" data-pohon="checkbox-root">
      <div class="" data-pohon="checkbox-container"><button tabindex="-1" data-orientation="horizontal" data-pohon="checkbox-base" id="v-0-0:3" role="checkbox" type="button" aria-checked="false" aria-required="false" data-state="unchecked" data-akar-collection-item="">
          <!---->
          <!--v-if-->
        </button></div>
      <div class="" data-pohon="checkbox-wrapper"><label for="v-0-0:3" class="" data-pohon="checkbox-label">Option 3</label>
        <!--v-if-->
      </div>
    </div>
  </fieldset>
  <!--v-if-->
</div>"
`;

exports[`checkboxGroup > renders with horizontal variant table correctly 1`] = `
"<div tabindex="0" data-orientation="horizontal" dir="ltr" style="outline-color: none; outline-style: none; outline-width: initial;" id="v-0-0" data-pohon="checkbox-group-root">
  <fieldset data-pohon="checkbox-group-fieldset">
    <!--v-if--><label class="" data-pohon="checkbox-root">
      <div class="" data-pohon="checkbox-container"><button tabindex="-1" data-orientation="horizontal" data-pohon="checkbox-base" id="v-0-0:1" role="checkbox" type="button" aria-checked="true" aria-required="false" data-state="checked" data-akar-collection-item=""><span data-state="checked" style="pointer-events: none;" class="" data-pohon="checkbox-indicator"><span class="iconify i-lucide:check" aria-hidden="true" data-pohon="checkbox-icon"></span></span>
          <!--v-if-->
        </button></div>
      <div class="" data-pohon="checkbox-wrapper">
        <p for="v-0-0:1" class="" data-pohon="checkbox-label">Option 1</p>
        <!--v-if-->
      </div>
    </label><label class="" data-pohon="checkbox-root">
      <div class="" data-pohon="checkbox-container"><button tabindex="-1" data-orientation="horizontal" data-pohon="checkbox-base" id="v-0-0:2" role="checkbox" type="button" aria-checked="false" aria-required="false" data-state="unchecked" data-akar-collection-item="">
          <!---->
          <!--v-if-->
        </button></div>
      <div class="" data-pohon="checkbox-wrapper">
        <p for="v-0-0:2" class="" data-pohon="checkbox-label">Option 2</p>
        <!--v-if-->
      </div>
    </label><label class="" data-pohon="checkbox-root">
      <div class="" data-pohon="checkbox-container"><button tabindex="-1" data-orientation="horizontal" data-pohon="checkbox-base" id="v-0-0:3" role="checkbox" type="button" aria-checked="false" aria-required="false" data-state="unchecked" data-akar-collection-item="">
          <!---->
          <!--v-if-->
        </button></div>
      <div class="" data-pohon="checkbox-wrapper">
        <p for="v-0-0:3" class="" data-pohon="checkbox-label">Option 3</p>
        <!--v-if-->
      </div>
    </label>
  </fieldset>
  <!--v-if-->
</div>"
`;

exports[`checkboxGroup > renders with indicator end correctly 1`] = `
"<div tabindex="0" data-orientation="vertical" dir="ltr" style="outline-color: none; outline-style: none; outline-width: initial;" id="v-0-0" data-pohon="checkbox-group-root">
  <fieldset data-pohon="checkbox-group-fieldset">
    <!--v-if-->
    <div class="" data-pohon="checkbox-root">
      <div class="" data-pohon="checkbox-container"><button tabindex="-1" data-orientation="vertical" data-pohon="checkbox-base" id="v-0-0:1" role="checkbox" type="button" aria-checked="true" aria-required="false" data-state="checked" data-akar-collection-item=""><span data-state="checked" style="pointer-events: none;" class="" data-pohon="checkbox-indicator"><span class="iconify i-lucide:check" aria-hidden="true" data-pohon="checkbox-icon"></span></span>
          <!--v-if-->
        </button></div>
      <div class="" data-pohon="checkbox-wrapper"><label for="v-0-0:1" class="" data-pohon="checkbox-label">Option 1</label>
        <!--v-if-->
      </div>
    </div>
    <div class="" data-pohon="checkbox-root">
      <div class="" data-pohon="checkbox-container"><button tabindex="-1" data-orientation="vertical" data-pohon="checkbox-base" id="v-0-0:2" role="checkbox" type="button" aria-checked="false" aria-required="false" data-state="unchecked" data-akar-collection-item="">
          <!---->
          <!--v-if-->
        </button></div>
      <div class="" data-pohon="checkbox-wrapper"><label for="v-0-0:2" class="" data-pohon="checkbox-label">Option 2</label>
        <!--v-if-->
      </div>
    </div>
    <div class="" data-pohon="checkbox-root">
      <div class="" data-pohon="checkbox-container"><button tabindex="-1" data-orientation="vertical" data-pohon="checkbox-base" id="v-0-0:3" role="checkbox" type="button" aria-checked="false" aria-required="false" data-state="unchecked" data-akar-collection-item="">
          <!---->
          <!--v-if-->
        </button></div>
      <div class="" data-pohon="checkbox-wrapper"><label for="v-0-0:3" class="" data-pohon="checkbox-label">Option 3</label>
        <!--v-if-->
      </div>
    </div>
  </fieldset>
  <!--v-if-->
</div>"
`;

exports[`checkboxGroup > renders with indicator hidden correctly 1`] = `
"<div tabindex="0" data-orientation="vertical" dir="ltr" style="outline-color: none; outline-style: none; outline-width: initial;" id="v-0-0" data-pohon="checkbox-group-root">
  <fieldset data-pohon="checkbox-group-fieldset">
    <!--v-if-->
    <div class="" data-pohon="checkbox-root">
      <div class="" data-pohon="checkbox-container"><button tabindex="-1" data-orientation="vertical" data-pohon="checkbox-base" id="v-0-0:1" role="checkbox" type="button" aria-checked="true" aria-required="false" data-state="checked" data-akar-collection-item=""><span data-state="checked" style="pointer-events: none;" class="" data-pohon="checkbox-indicator"><span class="iconify i-lucide:check" aria-hidden="true" data-pohon="checkbox-icon"></span></span>
          <!--v-if-->
        </button></div>
      <div class="" data-pohon="checkbox-wrapper"><label for="v-0-0:1" class="" data-pohon="checkbox-label">Option 1</label>
        <!--v-if-->
      </div>
    </div>
    <div class="" data-pohon="checkbox-root">
      <div class="" data-pohon="checkbox-container"><button tabindex="-1" data-orientation="vertical" data-pohon="checkbox-base" id="v-0-0:2" role="checkbox" type="button" aria-checked="false" aria-required="false" data-state="unchecked" data-akar-collection-item="">
          <!---->
          <!--v-if-->
        </button></div>
      <div class="" data-pohon="checkbox-wrapper"><label for="v-0-0:2" class="" data-pohon="checkbox-label">Option 2</label>
        <!--v-if-->
      </div>
    </div>
    <div class="" data-pohon="checkbox-root">
      <div class="" data-pohon="checkbox-container"><button tabindex="-1" data-orientation="vertical" data-pohon="checkbox-base" id="v-0-0:3" role="checkbox" type="button" aria-checked="false" aria-required="false" data-state="unchecked" data-akar-collection-item="">
          <!---->
          <!--v-if-->
        </button></div>
      <div class="" data-pohon="checkbox-wrapper"><label for="v-0-0:3" class="" data-pohon="checkbox-label">Option 3</label>
        <!--v-if-->
      </div>
    </div>
  </fieldset>
  <!--v-if-->
</div>"
`;

exports[`checkboxGroup > renders with indicator start correctly 1`] = `
"<div tabindex="0" data-orientation="vertical" dir="ltr" style="outline-color: none; outline-style: none; outline-width: initial;" id="v-0-0" data-pohon="checkbox-group-root">
  <fieldset data-pohon="checkbox-group-fieldset">
    <!--v-if-->
    <div class="" data-pohon="checkbox-root">
      <div class="" data-pohon="checkbox-container"><button tabindex="-1" data-orientation="vertical" data-pohon="checkbox-base" id="v-0-0:1" role="checkbox" type="button" aria-checked="true" aria-required="false" data-state="checked" data-akar-collection-item=""><span data-state="checked" style="pointer-events: none;" class="" data-pohon="checkbox-indicator"><span class="iconify i-lucide:check" aria-hidden="true" data-pohon="checkbox-icon"></span></span>
          <!--v-if-->
        </button></div>
      <div class="" data-pohon="checkbox-wrapper"><label for="v-0-0:1" class="" data-pohon="checkbox-label">Option 1</label>
        <!--v-if-->
      </div>
    </div>
    <div class="" data-pohon="checkbox-root">
      <div class="" data-pohon="checkbox-container"><button tabindex="-1" data-orientation="vertical" data-pohon="checkbox-base" id="v-0-0:2" role="checkbox" type="button" aria-checked="false" aria-required="false" data-state="unchecked" data-akar-collection-item="">
          <!---->
          <!--v-if-->
        </button></div>
      <div class="" data-pohon="checkbox-wrapper"><label for="v-0-0:2" class="" data-pohon="checkbox-label">Option 2</label>
        <!--v-if-->
      </div>
    </div>
    <div class="" data-pohon="checkbox-root">
      <div class="" data-pohon="checkbox-container"><button tabindex="-1" data-orientation="vertical" data-pohon="checkbox-base" id="v-0-0:3" role="checkbox" type="button" aria-checked="false" aria-required="false" data-state="unchecked" data-akar-collection-item="">
          <!---->
          <!--v-if-->
        </button></div>
      <div class="" data-pohon="checkbox-wrapper"><label for="v-0-0:3" class="" data-pohon="checkbox-label">Option 3</label>
        <!--v-if-->
      </div>
    </div>
  </fieldset>
  <!--v-if-->
</div>"
`;

exports[`checkboxGroup > renders with items correctly 1`] = `
"<div tabindex="0" data-orientation="vertical" dir="ltr" style="outline-color: none; outline-style: none; outline-width: initial;" id="v-0-0" data-pohon="checkbox-group-root">
  <fieldset data-pohon="checkbox-group-fieldset">
    <!--v-if-->
    <div class="" data-pohon="checkbox-root">
      <div class="" data-pohon="checkbox-container"><button tabindex="-1" data-orientation="vertical" data-pohon="checkbox-base" id="v-0-0:1" role="checkbox" type="button" aria-checked="false" aria-required="false" data-state="unchecked" data-akar-collection-item="">
          <!---->
          <!--v-if-->
        </button></div>
      <div class="" data-pohon="checkbox-wrapper"><label for="v-0-0:1" class="" data-pohon="checkbox-label">Option 1</label>
        <!--v-if-->
      </div>
    </div>
    <div class="" data-pohon="checkbox-root">
      <div class="" data-pohon="checkbox-container"><button tabindex="-1" data-orientation="vertical" data-pohon="checkbox-base" id="v-0-0:2" role="checkbox" type="button" aria-checked="false" aria-required="false" data-state="unchecked" data-akar-collection-item="">
          <!---->
          <!--v-if-->
        </button></div>
      <div class="" data-pohon="checkbox-wrapper"><label for="v-0-0:2" class="" data-pohon="checkbox-label">Option 2</label>
        <!--v-if-->
      </div>
    </div>
    <div class="" data-pohon="checkbox-root">
      <div class="" data-pohon="checkbox-container"><button tabindex="-1" data-orientation="vertical" data-pohon="checkbox-base" id="v-0-0:3" role="checkbox" type="button" aria-checked="false" aria-required="false" data-state="unchecked" data-akar-collection-item="">
          <!---->
          <!--v-if-->
        </button></div>
      <div class="" data-pohon="checkbox-wrapper"><label for="v-0-0:3" class="" data-pohon="checkbox-label">Option 3</label>
        <!--v-if-->
      </div>
    </div>
  </fieldset>
  <!--v-if-->
</div>"
`;

exports[`checkboxGroup > renders with label slot correctly 1`] = `
"<div tabindex="0" data-orientation="vertical" dir="ltr" style="outline-color: none; outline-style: none; outline-width: initial;" id="v-0-0" data-pohon="checkbox-group-root">
  <fieldset data-pohon="checkbox-group-fieldset">
    <!--v-if-->
    <div class="" data-pohon="checkbox-root">
      <div class="" data-pohon="checkbox-container"><button tabindex="-1" data-orientation="vertical" data-pohon="checkbox-base" id="v-0-0:1" role="checkbox" type="button" aria-checked="false" aria-required="false" data-state="unchecked" data-akar-collection-item="">
          <!---->
          <!--v-if-->
        </button></div>
      <div class="" data-pohon="checkbox-wrapper"><label for="v-0-0:1" class="" data-pohon="checkbox-label">Label slot</label>
        <!--v-if-->
      </div>
    </div>
    <div class="" data-pohon="checkbox-root">
      <div class="" data-pohon="checkbox-container"><button tabindex="-1" data-orientation="vertical" data-pohon="checkbox-base" id="v-0-0:2" role="checkbox" type="button" aria-checked="false" aria-required="false" data-state="unchecked" data-akar-collection-item="">
          <!---->
          <!--v-if-->
        </button></div>
      <div class="" data-pohon="checkbox-wrapper"><label for="v-0-0:2" class="" data-pohon="checkbox-label">Label slot</label>
        <!--v-if-->
      </div>
    </div>
    <div class="" data-pohon="checkbox-root">
      <div class="" data-pohon="checkbox-container"><button tabindex="-1" data-orientation="vertical" data-pohon="checkbox-base" id="v-0-0:3" role="checkbox" type="button" aria-checked="false" aria-required="false" data-state="unchecked" data-akar-collection-item="">
          <!---->
          <!--v-if-->
        </button></div>
      <div class="" data-pohon="checkbox-wrapper"><label for="v-0-0:3" class="" data-pohon="checkbox-label">Label slot</label>
        <!--v-if-->
      </div>
    </div>
  </fieldset>
  <!--v-if-->
</div>"
`;

exports[`checkboxGroup > renders with labelKey correctly 1`] = `
"<div tabindex="0" data-orientation="vertical" dir="ltr" style="outline-color: none; outline-style: none; outline-width: initial;" id="v-0-0" data-pohon="checkbox-group-root">
  <fieldset data-pohon="checkbox-group-fieldset">
    <!--v-if-->
    <div class="" data-pohon="checkbox-root">
      <div class="" data-pohon="checkbox-container"><button tabindex="-1" data-orientation="vertical" data-pohon="checkbox-base" id="v-0-0:1" role="checkbox" type="button" aria-checked="false" aria-required="false" data-state="unchecked" data-akar-collection-item="">
          <!---->
          <!--v-if-->
        </button></div>
      <div class="" data-pohon="checkbox-wrapper"><label for="v-0-0:1" class="" data-pohon="checkbox-label">1</label>
        <!--v-if-->
      </div>
    </div>
    <div class="" data-pohon="checkbox-root">
      <div class="" data-pohon="checkbox-container"><button tabindex="-1" data-orientation="vertical" data-pohon="checkbox-base" id="v-0-0:2" role="checkbox" type="button" aria-checked="false" aria-required="false" data-state="unchecked" data-akar-collection-item="">
          <!---->
          <!--v-if-->
        </button></div>
      <div class="" data-pohon="checkbox-wrapper"><label for="v-0-0:2" class="" data-pohon="checkbox-label">2</label>
        <!--v-if-->
      </div>
    </div>
    <div class="" data-pohon="checkbox-root">
      <div class="" data-pohon="checkbox-container"><button tabindex="-1" data-orientation="vertical" data-pohon="checkbox-base" id="v-0-0:3" role="checkbox" type="button" aria-checked="false" aria-required="false" data-state="unchecked" data-akar-collection-item="">
          <!---->
          <!--v-if-->
        </button></div>
      <div class="" data-pohon="checkbox-wrapper"><label for="v-0-0:3" class="" data-pohon="checkbox-label">3</label>
        <!--v-if-->
      </div>
    </div>
  </fieldset>
  <!--v-if-->
</div>"
`;

exports[`checkboxGroup > renders with legend slot correctly 1`] = `
"<div tabindex="0" data-orientation="vertical" dir="ltr" style="outline-color: none; outline-style: none; outline-width: initial;" id="v-0-0" data-pohon="checkbox-group-root">
  <fieldset data-pohon="checkbox-group-fieldset">
    <legend class="" data-pohon="checkbox-group-legend">Legend slot</legend>
    <div class="" data-pohon="checkbox-root">
      <div class="" data-pohon="checkbox-container"><button tabindex="-1" data-orientation="vertical" data-pohon="checkbox-base" id="v-0-0:1" role="checkbox" type="button" aria-checked="false" aria-required="false" data-state="unchecked" data-akar-collection-item="">
          <!---->
          <!--v-if-->
        </button></div>
      <div class="" data-pohon="checkbox-wrapper"><label for="v-0-0:1" class="" data-pohon="checkbox-label">Option 1</label>
        <!--v-if-->
      </div>
    </div>
    <div class="" data-pohon="checkbox-root">
      <div class="" data-pohon="checkbox-container"><button tabindex="-1" data-orientation="vertical" data-pohon="checkbox-base" id="v-0-0:2" role="checkbox" type="button" aria-checked="false" aria-required="false" data-state="unchecked" data-akar-collection-item="">
          <!---->
          <!--v-if-->
        </button></div>
      <div class="" data-pohon="checkbox-wrapper"><label for="v-0-0:2" class="" data-pohon="checkbox-label">Option 2</label>
        <!--v-if-->
      </div>
    </div>
    <div class="" data-pohon="checkbox-root">
      <div class="" data-pohon="checkbox-container"><button tabindex="-1" data-orientation="vertical" data-pohon="checkbox-base" id="v-0-0:3" role="checkbox" type="button" aria-checked="false" aria-required="false" data-state="unchecked" data-akar-collection-item="">
          <!---->
          <!--v-if-->
        </button></div>
      <div class="" data-pohon="checkbox-wrapper"><label for="v-0-0:3" class="" data-pohon="checkbox-label">Option 3</label>
        <!--v-if-->
      </div>
    </div>
  </fieldset>
  <!--v-if-->
</div>"
`;

exports[`checkboxGroup > renders with modelValue correctly 1`] = `
"<div tabindex="0" data-orientation="vertical" dir="ltr" style="outline-color: none; outline-style: none; outline-width: initial;" id="v-0-0" data-pohon="checkbox-group-root">
  <fieldset data-pohon="checkbox-group-fieldset">
    <!--v-if-->
    <div class="" data-pohon="checkbox-root">
      <div class="" data-pohon="checkbox-container"><button tabindex="-1" data-orientation="vertical" data-pohon="checkbox-base" id="v-0-0:1" role="checkbox" type="button" aria-checked="true" aria-required="false" data-state="checked" data-akar-collection-item=""><span data-state="checked" style="pointer-events: none;" class="" data-pohon="checkbox-indicator"><span class="iconify i-lucide:check" aria-hidden="true" data-pohon="checkbox-icon"></span></span>
          <!--v-if-->
        </button></div>
      <div class="" data-pohon="checkbox-wrapper"><label for="v-0-0:1" class="" data-pohon="checkbox-label">Option 1</label>
        <!--v-if-->
      </div>
    </div>
    <div class="" data-pohon="checkbox-root">
      <div class="" data-pohon="checkbox-container"><button tabindex="-1" data-orientation="vertical" data-pohon="checkbox-base" id="v-0-0:2" role="checkbox" type="button" aria-checked="false" aria-required="false" data-state="unchecked" data-akar-collection-item="">
          <!---->
          <!--v-if-->
        </button></div>
      <div class="" data-pohon="checkbox-wrapper"><label for="v-0-0:2" class="" data-pohon="checkbox-label">Option 2</label>
        <!--v-if-->
      </div>
    </div>
    <div class="" data-pohon="checkbox-root">
      <div class="" data-pohon="checkbox-container"><button tabindex="-1" data-orientation="vertical" data-pohon="checkbox-base" id="v-0-0:3" role="checkbox" type="button" aria-checked="false" aria-required="false" data-state="unchecked" data-akar-collection-item="">
          <!---->
          <!--v-if-->
        </button></div>
      <div class="" data-pohon="checkbox-wrapper"><label for="v-0-0:3" class="" data-pohon="checkbox-label">Option 3</label>
        <!--v-if-->
      </div>
    </div>
  </fieldset>
  <!--v-if-->
</div>"
`;

exports[`checkboxGroup > renders with neutral variant card correctly 1`] = `
"<div tabindex="0" data-orientation="vertical" dir="ltr" style="outline-color: none; outline-style: none; outline-width: initial;" id="v-0-0" data-pohon="checkbox-group-root">
  <fieldset data-pohon="checkbox-group-fieldset">
    <!--v-if--><label class="" data-pohon="checkbox-root">
      <div class="" data-pohon="checkbox-container"><button tabindex="-1" data-orientation="vertical" data-pohon="checkbox-base" id="v-0-0:1" role="checkbox" type="button" aria-checked="true" aria-required="false" data-state="checked" data-akar-collection-item=""><span data-state="checked" style="pointer-events: none;" class="" data-pohon="checkbox-indicator"><span class="iconify i-lucide:check" aria-hidden="true" data-pohon="checkbox-icon"></span></span>
          <!--v-if-->
        </button></div>
      <div class="" data-pohon="checkbox-wrapper">
        <p for="v-0-0:1" class="" data-pohon="checkbox-label">Option 1</p>
        <!--v-if-->
      </div>
    </label><label class="" data-pohon="checkbox-root">
      <div class="" data-pohon="checkbox-container"><button tabindex="-1" data-orientation="vertical" data-pohon="checkbox-base" id="v-0-0:2" role="checkbox" type="button" aria-checked="false" aria-required="false" data-state="unchecked" data-akar-collection-item="">
          <!---->
          <!--v-if-->
        </button></div>
      <div class="" data-pohon="checkbox-wrapper">
        <p for="v-0-0:2" class="" data-pohon="checkbox-label">Option 2</p>
        <!--v-if-->
      </div>
    </label><label class="" data-pohon="checkbox-root">
      <div class="" data-pohon="checkbox-container"><button tabindex="-1" data-orientation="vertical" data-pohon="checkbox-base" id="v-0-0:3" role="checkbox" type="button" aria-checked="false" aria-required="false" data-state="unchecked" data-akar-collection-item="">
          <!---->
          <!--v-if-->
        </button></div>
      <div class="" data-pohon="checkbox-wrapper">
        <p for="v-0-0:3" class="" data-pohon="checkbox-label">Option 3</p>
        <!--v-if-->
      </div>
    </label>
  </fieldset>
  <!--v-if-->
</div>"
`;

exports[`checkboxGroup > renders with neutral variant list correctly 1`] = `
"<div tabindex="0" data-orientation="vertical" dir="ltr" style="outline-color: none; outline-style: none; outline-width: initial;" id="v-0-0" data-pohon="checkbox-group-root">
  <fieldset data-pohon="checkbox-group-fieldset">
    <!--v-if-->
    <div class="" data-pohon="checkbox-root">
      <div class="" data-pohon="checkbox-container"><button tabindex="-1" data-orientation="vertical" data-pohon="checkbox-base" id="v-0-0:1" role="checkbox" type="button" aria-checked="true" aria-required="false" data-state="checked" data-akar-collection-item=""><span data-state="checked" style="pointer-events: none;" class="" data-pohon="checkbox-indicator"><span class="iconify i-lucide:check" aria-hidden="true" data-pohon="checkbox-icon"></span></span>
          <!--v-if-->
        </button></div>
      <div class="" data-pohon="checkbox-wrapper"><label for="v-0-0:1" class="" data-pohon="checkbox-label">Option 1</label>
        <!--v-if-->
      </div>
    </div>
    <div class="" data-pohon="checkbox-root">
      <div class="" data-pohon="checkbox-container"><button tabindex="-1" data-orientation="vertical" data-pohon="checkbox-base" id="v-0-0:2" role="checkbox" type="button" aria-checked="false" aria-required="false" data-state="unchecked" data-akar-collection-item="">
          <!---->
          <!--v-if-->
        </button></div>
      <div class="" data-pohon="checkbox-wrapper"><label for="v-0-0:2" class="" data-pohon="checkbox-label">Option 2</label>
        <!--v-if-->
      </div>
    </div>
    <div class="" data-pohon="checkbox-root">
      <div class="" data-pohon="checkbox-container"><button tabindex="-1" data-orientation="vertical" data-pohon="checkbox-base" id="v-0-0:3" role="checkbox" type="button" aria-checked="false" aria-required="false" data-state="unchecked" data-akar-collection-item="">
          <!---->
          <!--v-if-->
        </button></div>
      <div class="" data-pohon="checkbox-wrapper"><label for="v-0-0:3" class="" data-pohon="checkbox-label">Option 3</label>
        <!--v-if-->
      </div>
    </div>
  </fieldset>
  <!--v-if-->
</div>"
`;

exports[`checkboxGroup > renders with neutral variant table correctly 1`] = `
"<div tabindex="0" data-orientation="vertical" dir="ltr" style="outline-color: none; outline-style: none; outline-width: initial;" id="v-0-0" data-pohon="checkbox-group-root">
  <fieldset data-pohon="checkbox-group-fieldset">
    <!--v-if--><label class="" data-pohon="checkbox-root">
      <div class="" data-pohon="checkbox-container"><button tabindex="-1" data-orientation="vertical" data-pohon="checkbox-base" id="v-0-0:1" role="checkbox" type="button" aria-checked="true" aria-required="false" data-state="checked" data-akar-collection-item=""><span data-state="checked" style="pointer-events: none;" class="" data-pohon="checkbox-indicator"><span class="iconify i-lucide:check" aria-hidden="true" data-pohon="checkbox-icon"></span></span>
          <!--v-if-->
        </button></div>
      <div class="" data-pohon="checkbox-wrapper">
        <p for="v-0-0:1" class="" data-pohon="checkbox-label">Option 1</p>
        <!--v-if-->
      </div>
    </label><label class="" data-pohon="checkbox-root">
      <div class="" data-pohon="checkbox-container"><button tabindex="-1" data-orientation="vertical" data-pohon="checkbox-base" id="v-0-0:2" role="checkbox" type="button" aria-checked="false" aria-required="false" data-state="unchecked" data-akar-collection-item="">
          <!---->
          <!--v-if-->
        </button></div>
      <div class="" data-pohon="checkbox-wrapper">
        <p for="v-0-0:2" class="" data-pohon="checkbox-label">Option 2</p>
        <!--v-if-->
      </div>
    </label><label class="" data-pohon="checkbox-root">
      <div class="" data-pohon="checkbox-container"><button tabindex="-1" data-orientation="vertical" data-pohon="checkbox-base" id="v-0-0:3" role="checkbox" type="button" aria-checked="false" aria-required="false" data-state="unchecked" data-akar-collection-item="">
          <!---->
          <!--v-if-->
        </button></div>
      <div class="" data-pohon="checkbox-wrapper">
        <p for="v-0-0:3" class="" data-pohon="checkbox-label">Option 3</p>
        <!--v-if-->
      </div>
    </label>
  </fieldset>
  <!--v-if-->
</div>"
`;

exports[`checkboxGroup > renders with primary variant card correctly 1`] = `
"<div tabindex="0" data-orientation="vertical" dir="ltr" style="outline-color: none; outline-style: none; outline-width: initial;" id="v-0-0" data-pohon="checkbox-group-root">
  <fieldset data-pohon="checkbox-group-fieldset">
    <!--v-if--><label class="" data-pohon="checkbox-root">
      <div class="" data-pohon="checkbox-container"><button tabindex="-1" data-orientation="vertical" data-pohon="checkbox-base" id="v-0-0:1" role="checkbox" type="button" aria-checked="true" aria-required="false" data-state="checked" data-akar-collection-item=""><span data-state="checked" style="pointer-events: none;" class="" data-pohon="checkbox-indicator"><span class="iconify i-lucide:check" aria-hidden="true" data-pohon="checkbox-icon"></span></span>
          <!--v-if-->
        </button></div>
      <div class="" data-pohon="checkbox-wrapper">
        <p for="v-0-0:1" class="" data-pohon="checkbox-label">Option 1</p>
        <!--v-if-->
      </div>
    </label><label class="" data-pohon="checkbox-root">
      <div class="" data-pohon="checkbox-container"><button tabindex="-1" data-orientation="vertical" data-pohon="checkbox-base" id="v-0-0:2" role="checkbox" type="button" aria-checked="false" aria-required="false" data-state="unchecked" data-akar-collection-item="">
          <!---->
          <!--v-if-->
        </button></div>
      <div class="" data-pohon="checkbox-wrapper">
        <p for="v-0-0:2" class="" data-pohon="checkbox-label">Option 2</p>
        <!--v-if-->
      </div>
    </label><label class="" data-pohon="checkbox-root">
      <div class="" data-pohon="checkbox-container"><button tabindex="-1" data-orientation="vertical" data-pohon="checkbox-base" id="v-0-0:3" role="checkbox" type="button" aria-checked="false" aria-required="false" data-state="unchecked" data-akar-collection-item="">
          <!---->
          <!--v-if-->
        </button></div>
      <div class="" data-pohon="checkbox-wrapper">
        <p for="v-0-0:3" class="" data-pohon="checkbox-label">Option 3</p>
        <!--v-if-->
      </div>
    </label>
  </fieldset>
  <!--v-if-->
</div>"
`;

exports[`checkboxGroup > renders with primary variant list correctly 1`] = `
"<div tabindex="0" data-orientation="vertical" dir="ltr" style="outline-color: none; outline-style: none; outline-width: initial;" id="v-0-0" data-pohon="checkbox-group-root">
  <fieldset data-pohon="checkbox-group-fieldset">
    <!--v-if-->
    <div class="" data-pohon="checkbox-root">
      <div class="" data-pohon="checkbox-container"><button tabindex="-1" data-orientation="vertical" data-pohon="checkbox-base" id="v-0-0:1" role="checkbox" type="button" aria-checked="true" aria-required="false" data-state="checked" data-akar-collection-item=""><span data-state="checked" style="pointer-events: none;" class="" data-pohon="checkbox-indicator"><span class="iconify i-lucide:check" aria-hidden="true" data-pohon="checkbox-icon"></span></span>
          <!--v-if-->
        </button></div>
      <div class="" data-pohon="checkbox-wrapper"><label for="v-0-0:1" class="" data-pohon="checkbox-label">Option 1</label>
        <!--v-if-->
      </div>
    </div>
    <div class="" data-pohon="checkbox-root">
      <div class="" data-pohon="checkbox-container"><button tabindex="-1" data-orientation="vertical" data-pohon="checkbox-base" id="v-0-0:2" role="checkbox" type="button" aria-checked="false" aria-required="false" data-state="unchecked" data-akar-collection-item="">
          <!---->
          <!--v-if-->
        </button></div>
      <div class="" data-pohon="checkbox-wrapper"><label for="v-0-0:2" class="" data-pohon="checkbox-label">Option 2</label>
        <!--v-if-->
      </div>
    </div>
    <div class="" data-pohon="checkbox-root">
      <div class="" data-pohon="checkbox-container"><button tabindex="-1" data-orientation="vertical" data-pohon="checkbox-base" id="v-0-0:3" role="checkbox" type="button" aria-checked="false" aria-required="false" data-state="unchecked" data-akar-collection-item="">
          <!---->
          <!--v-if-->
        </button></div>
      <div class="" data-pohon="checkbox-wrapper"><label for="v-0-0:3" class="" data-pohon="checkbox-label">Option 3</label>
        <!--v-if-->
      </div>
    </div>
  </fieldset>
  <!--v-if-->
</div>"
`;

exports[`checkboxGroup > renders with primary variant table correctly 1`] = `
"<div tabindex="0" data-orientation="vertical" dir="ltr" style="outline-color: none; outline-style: none; outline-width: initial;" id="v-0-0" data-pohon="checkbox-group-root">
  <fieldset data-pohon="checkbox-group-fieldset">
    <!--v-if--><label class="" data-pohon="checkbox-root">
      <div class="" data-pohon="checkbox-container"><button tabindex="-1" data-orientation="vertical" data-pohon="checkbox-base" id="v-0-0:1" role="checkbox" type="button" aria-checked="true" aria-required="false" data-state="checked" data-akar-collection-item=""><span data-state="checked" style="pointer-events: none;" class="" data-pohon="checkbox-indicator"><span class="iconify i-lucide:check" aria-hidden="true" data-pohon="checkbox-icon"></span></span>
          <!--v-if-->
        </button></div>
      <div class="" data-pohon="checkbox-wrapper">
        <p for="v-0-0:1" class="" data-pohon="checkbox-label">Option 1</p>
        <!--v-if-->
      </div>
    </label><label class="" data-pohon="checkbox-root">
      <div class="" data-pohon="checkbox-container"><button tabindex="-1" data-orientation="vertical" data-pohon="checkbox-base" id="v-0-0:2" role="checkbox" type="button" aria-checked="false" aria-required="false" data-state="unchecked" data-akar-collection-item="">
          <!---->
          <!--v-if-->
        </button></div>
      <div class="" data-pohon="checkbox-wrapper">
        <p for="v-0-0:2" class="" data-pohon="checkbox-label">Option 2</p>
        <!--v-if-->
      </div>
    </label><label class="" data-pohon="checkbox-root">
      <div class="" data-pohon="checkbox-container"><button tabindex="-1" data-orientation="vertical" data-pohon="checkbox-base" id="v-0-0:3" role="checkbox" type="button" aria-checked="false" aria-required="false" data-state="unchecked" data-akar-collection-item="">
          <!---->
          <!--v-if-->
        </button></div>
      <div class="" data-pohon="checkbox-wrapper">
        <p for="v-0-0:3" class="" data-pohon="checkbox-label">Option 3</p>
        <!--v-if-->
      </div>
    </label>
  </fieldset>
  <!--v-if-->
</div>"
`;

exports[`checkboxGroup > renders with required correctly 1`] = `
"<div tabindex="0" data-orientation="vertical" dir="ltr" style="outline-color: none; outline-style: none; outline-width: initial;" id="v-0-0" data-pohon="checkbox-group-root">
  <fieldset data-pohon="checkbox-group-fieldset">
    <legend class="" data-pohon="checkbox-group-legend">Legend</legend>
    <div class="" data-pohon="checkbox-root">
      <div class="" data-pohon="checkbox-container"><button tabindex="-1" data-orientation="vertical" data-pohon="checkbox-base" id="v-0-0:1" role="checkbox" type="button" aria-checked="false" aria-required="false" data-state="unchecked" data-akar-collection-item="">
          <!---->
          <!--v-if-->
        </button></div>
      <div class="" data-pohon="checkbox-wrapper"><label for="v-0-0:1" class="" data-pohon="checkbox-label">Option 1</label>
        <!--v-if-->
      </div>
    </div>
    <div class="" data-pohon="checkbox-root">
      <div class="" data-pohon="checkbox-container"><button tabindex="-1" data-orientation="vertical" data-pohon="checkbox-base" id="v-0-0:2" role="checkbox" type="button" aria-checked="false" aria-required="false" data-state="unchecked" data-akar-collection-item="">
          <!---->
          <!--v-if-->
        </button></div>
      <div class="" data-pohon="checkbox-wrapper"><label for="v-0-0:2" class="" data-pohon="checkbox-label">Option 2</label>
        <!--v-if-->
      </div>
    </div>
    <div class="" data-pohon="checkbox-root">
      <div class="" data-pohon="checkbox-container"><button tabindex="-1" data-orientation="vertical" data-pohon="checkbox-base" id="v-0-0:3" role="checkbox" type="button" aria-checked="false" aria-required="false" data-state="unchecked" data-akar-collection-item="">
          <!---->
          <!--v-if-->
        </button></div>
      <div class="" data-pohon="checkbox-wrapper"><label for="v-0-0:3" class="" data-pohon="checkbox-label">Option 3</label>
        <!--v-if-->
      </div>
    </div>
  </fieldset>
  <!--v-if-->
</div>"
`;

exports[`checkboxGroup > renders with size lg correctly 1`] = `
"<div tabindex="0" data-orientation="vertical" dir="ltr" style="outline-color: none; outline-style: none; outline-width: initial;" id="v-0-0" data-pohon="checkbox-group-root">
  <fieldset data-pohon="checkbox-group-fieldset">
    <!--v-if-->
    <div class="" data-pohon="checkbox-root">
      <div class="" data-pohon="checkbox-container"><button tabindex="-1" data-orientation="vertical" data-pohon="checkbox-base" id="v-0-0:1" role="checkbox" type="button" aria-checked="true" aria-required="false" data-state="checked" data-akar-collection-item=""><span data-state="checked" style="pointer-events: none;" class="" data-pohon="checkbox-indicator"><span class="iconify i-lucide:check" aria-hidden="true" data-pohon="checkbox-icon"></span></span>
          <!--v-if-->
        </button></div>
      <div class="" data-pohon="checkbox-wrapper"><label for="v-0-0:1" class="" data-pohon="checkbox-label">Option 1</label>
        <!--v-if-->
      </div>
    </div>
    <div class="" data-pohon="checkbox-root">
      <div class="" data-pohon="checkbox-container"><button tabindex="-1" data-orientation="vertical" data-pohon="checkbox-base" id="v-0-0:2" role="checkbox" type="button" aria-checked="false" aria-required="false" data-state="unchecked" data-akar-collection-item="">
          <!---->
          <!--v-if-->
        </button></div>
      <div class="" data-pohon="checkbox-wrapper"><label for="v-0-0:2" class="" data-pohon="checkbox-label">Option 2</label>
        <!--v-if-->
      </div>
    </div>
    <div class="" data-pohon="checkbox-root">
      <div class="" data-pohon="checkbox-container"><button tabindex="-1" data-orientation="vertical" data-pohon="checkbox-base" id="v-0-0:3" role="checkbox" type="button" aria-checked="false" aria-required="false" data-state="unchecked" data-akar-collection-item="">
          <!---->
          <!--v-if-->
        </button></div>
      <div class="" data-pohon="checkbox-wrapper"><label for="v-0-0:3" class="" data-pohon="checkbox-label">Option 3</label>
        <!--v-if-->
      </div>
    </div>
  </fieldset>
  <!--v-if-->
</div>"
`;

exports[`checkboxGroup > renders with size md correctly 1`] = `
"<div tabindex="0" data-orientation="vertical" dir="ltr" style="outline-color: none; outline-style: none; outline-width: initial;" id="v-0-0" data-pohon="checkbox-group-root">
  <fieldset data-pohon="checkbox-group-fieldset">
    <!--v-if-->
    <div class="" data-pohon="checkbox-root">
      <div class="" data-pohon="checkbox-container"><button tabindex="-1" data-orientation="vertical" data-pohon="checkbox-base" id="v-0-0:1" role="checkbox" type="button" aria-checked="true" aria-required="false" data-state="checked" data-akar-collection-item=""><span data-state="checked" style="pointer-events: none;" class="" data-pohon="checkbox-indicator"><span class="iconify i-lucide:check" aria-hidden="true" data-pohon="checkbox-icon"></span></span>
          <!--v-if-->
        </button></div>
      <div class="" data-pohon="checkbox-wrapper"><label for="v-0-0:1" class="" data-pohon="checkbox-label">Option 1</label>
        <!--v-if-->
      </div>
    </div>
    <div class="" data-pohon="checkbox-root">
      <div class="" data-pohon="checkbox-container"><button tabindex="-1" data-orientation="vertical" data-pohon="checkbox-base" id="v-0-0:2" role="checkbox" type="button" aria-checked="false" aria-required="false" data-state="unchecked" data-akar-collection-item="">
          <!---->
          <!--v-if-->
        </button></div>
      <div class="" data-pohon="checkbox-wrapper"><label for="v-0-0:2" class="" data-pohon="checkbox-label">Option 2</label>
        <!--v-if-->
      </div>
    </div>
    <div class="" data-pohon="checkbox-root">
      <div class="" data-pohon="checkbox-container"><button tabindex="-1" data-orientation="vertical" data-pohon="checkbox-base" id="v-0-0:3" role="checkbox" type="button" aria-checked="false" aria-required="false" data-state="unchecked" data-akar-collection-item="">
          <!---->
          <!--v-if-->
        </button></div>
      <div class="" data-pohon="checkbox-wrapper"><label for="v-0-0:3" class="" data-pohon="checkbox-label">Option 3</label>
        <!--v-if-->
      </div>
    </div>
  </fieldset>
  <!--v-if-->
</div>"
`;

exports[`checkboxGroup > renders with size sm correctly 1`] = `
"<div tabindex="0" data-orientation="vertical" dir="ltr" style="outline-color: none; outline-style: none; outline-width: initial;" id="v-0-0" data-pohon="checkbox-group-root">
  <fieldset data-pohon="checkbox-group-fieldset">
    <!--v-if-->
    <div class="" data-pohon="checkbox-root">
      <div class="" data-pohon="checkbox-container"><button tabindex="-1" data-orientation="vertical" data-pohon="checkbox-base" id="v-0-0:1" role="checkbox" type="button" aria-checked="true" aria-required="false" data-state="checked" data-akar-collection-item=""><span data-state="checked" style="pointer-events: none;" class="" data-pohon="checkbox-indicator"><span class="iconify i-lucide:check" aria-hidden="true" data-pohon="checkbox-icon"></span></span>
          <!--v-if-->
        </button></div>
      <div class="" data-pohon="checkbox-wrapper"><label for="v-0-0:1" class="" data-pohon="checkbox-label">Option 1</label>
        <!--v-if-->
      </div>
    </div>
    <div class="" data-pohon="checkbox-root">
      <div class="" data-pohon="checkbox-container"><button tabindex="-1" data-orientation="vertical" data-pohon="checkbox-base" id="v-0-0:2" role="checkbox" type="button" aria-checked="false" aria-required="false" data-state="unchecked" data-akar-collection-item="">
          <!---->
          <!--v-if-->
        </button></div>
      <div class="" data-pohon="checkbox-wrapper"><label for="v-0-0:2" class="" data-pohon="checkbox-label">Option 2</label>
        <!--v-if-->
      </div>
    </div>
    <div class="" data-pohon="checkbox-root">
      <div class="" data-pohon="checkbox-container"><button tabindex="-1" data-orientation="vertical" data-pohon="checkbox-base" id="v-0-0:3" role="checkbox" type="button" aria-checked="false" aria-required="false" data-state="unchecked" data-akar-collection-item="">
          <!---->
          <!--v-if-->
        </button></div>
      <div class="" data-pohon="checkbox-wrapper"><label for="v-0-0:3" class="" data-pohon="checkbox-label">Option 3</label>
        <!--v-if-->
      </div>
    </div>
  </fieldset>
  <!--v-if-->
</div>"
`;

exports[`checkboxGroup > renders with size xl correctly 1`] = `
"<div tabindex="0" data-orientation="vertical" dir="ltr" style="outline-color: none; outline-style: none; outline-width: initial;" id="v-0-0" data-pohon="checkbox-group-root">
  <fieldset data-pohon="checkbox-group-fieldset">
    <!--v-if-->
    <div class="" data-pohon="checkbox-root">
      <div class="" data-pohon="checkbox-container"><button tabindex="-1" data-orientation="vertical" data-pohon="checkbox-base" id="v-0-0:1" role="checkbox" type="button" aria-checked="true" aria-required="false" data-state="checked" data-akar-collection-item=""><span data-state="checked" style="pointer-events: none;" class="" data-pohon="checkbox-indicator"><span class="iconify i-lucide:check" aria-hidden="true" data-pohon="checkbox-icon"></span></span>
          <!--v-if-->
        </button></div>
      <div class="" data-pohon="checkbox-wrapper"><label for="v-0-0:1" class="" data-pohon="checkbox-label">Option 1</label>
        <!--v-if-->
      </div>
    </div>
    <div class="" data-pohon="checkbox-root">
      <div class="" data-pohon="checkbox-container"><button tabindex="-1" data-orientation="vertical" data-pohon="checkbox-base" id="v-0-0:2" role="checkbox" type="button" aria-checked="false" aria-required="false" data-state="unchecked" data-akar-collection-item="">
          <!---->
          <!--v-if-->
        </button></div>
      <div class="" data-pohon="checkbox-wrapper"><label for="v-0-0:2" class="" data-pohon="checkbox-label">Option 2</label>
        <!--v-if-->
      </div>
    </div>
    <div class="" data-pohon="checkbox-root">
      <div class="" data-pohon="checkbox-container"><button tabindex="-1" data-orientation="vertical" data-pohon="checkbox-base" id="v-0-0:3" role="checkbox" type="button" aria-checked="false" aria-required="false" data-state="unchecked" data-akar-collection-item="">
          <!---->
          <!--v-if-->
        </button></div>
      <div class="" data-pohon="checkbox-wrapper"><label for="v-0-0:3" class="" data-pohon="checkbox-label">Option 3</label>
        <!--v-if-->
      </div>
    </div>
  </fieldset>
  <!--v-if-->
</div>"
`;

exports[`checkboxGroup > renders with size xs correctly 1`] = `
"<div tabindex="0" data-orientation="vertical" dir="ltr" style="outline-color: none; outline-style: none; outline-width: initial;" id="v-0-0" data-pohon="checkbox-group-root">
  <fieldset data-pohon="checkbox-group-fieldset">
    <!--v-if-->
    <div class="" data-pohon="checkbox-root">
      <div class="" data-pohon="checkbox-container"><button tabindex="-1" data-orientation="vertical" data-pohon="checkbox-base" id="v-0-0:1" role="checkbox" type="button" aria-checked="true" aria-required="false" data-state="checked" data-akar-collection-item=""><span data-state="checked" style="pointer-events: none;" class="" data-pohon="checkbox-indicator"><span class="iconify i-lucide:check" aria-hidden="true" data-pohon="checkbox-icon"></span></span>
          <!--v-if-->
        </button></div>
      <div class="" data-pohon="checkbox-wrapper"><label for="v-0-0:1" class="" data-pohon="checkbox-label">Option 1</label>
        <!--v-if-->
      </div>
    </div>
    <div class="" data-pohon="checkbox-root">
      <div class="" data-pohon="checkbox-container"><button tabindex="-1" data-orientation="vertical" data-pohon="checkbox-base" id="v-0-0:2" role="checkbox" type="button" aria-checked="false" aria-required="false" data-state="unchecked" data-akar-collection-item="">
          <!---->
          <!--v-if-->
        </button></div>
      <div class="" data-pohon="checkbox-wrapper"><label for="v-0-0:2" class="" data-pohon="checkbox-label">Option 2</label>
        <!--v-if-->
      </div>
    </div>
    <div class="" data-pohon="checkbox-root">
      <div class="" data-pohon="checkbox-container"><button tabindex="-1" data-orientation="vertical" data-pohon="checkbox-base" id="v-0-0:3" role="checkbox" type="button" aria-checked="false" aria-required="false" data-state="unchecked" data-akar-collection-item="">
          <!---->
          <!--v-if-->
        </button></div>
      <div class="" data-pohon="checkbox-wrapper"><label for="v-0-0:3" class="" data-pohon="checkbox-label">Option 3</label>
        <!--v-if-->
      </div>
    </div>
  </fieldset>
  <!--v-if-->
</div>"
`;

exports[`checkboxGroup > renders with ui correctly 1`] = `
"<div tabindex="0" data-orientation="vertical" dir="ltr" style="outline-color: none; outline-style: none; outline-width: initial;" id="v-0-0" data-pohon="checkbox-group-root">
  <fieldset class="gap-x-4" data-pohon="checkbox-group-fieldset">
    <!--v-if-->
    <div class="" data-pohon="checkbox-root">
      <div class="" data-pohon="checkbox-container"><button tabindex="-1" data-orientation="vertical" data-pohon="checkbox-base" id="v-0-0:1" role="checkbox" type="button" aria-checked="false" aria-required="false" data-state="unchecked" data-akar-collection-item="">
          <!---->
          <!--v-if-->
        </button></div>
      <div class="" data-pohon="checkbox-wrapper"><label for="v-0-0:1" class="text-red" data-pohon="checkbox-label">Option 1</label>
        <!--v-if-->
      </div>
    </div>
    <div class="" data-pohon="checkbox-root">
      <div class="" data-pohon="checkbox-container"><button tabindex="-1" data-orientation="vertical" data-pohon="checkbox-base" id="v-0-0:2" role="checkbox" type="button" aria-checked="false" aria-required="false" data-state="unchecked" data-akar-collection-item="">
          <!---->
          <!--v-if-->
        </button></div>
      <div class="" data-pohon="checkbox-wrapper"><label for="v-0-0:2" class="text-red" data-pohon="checkbox-label">Option 2</label>
        <!--v-if-->
      </div>
    </div>
    <div class="" data-pohon="checkbox-root">
      <div class="" data-pohon="checkbox-container"><button tabindex="-1" data-orientation="vertical" data-pohon="checkbox-base" id="v-0-0:3" role="checkbox" type="button" aria-checked="false" aria-required="false" data-state="unchecked" data-akar-collection-item="">
          <!---->
          <!--v-if-->
        </button></div>
      <div class="" data-pohon="checkbox-wrapper"><label for="v-0-0:3" class="text-red" data-pohon="checkbox-label">Option 3</label>
        <!--v-if-->
      </div>
    </div>
  </fieldset>
  <!--v-if-->
</div>"
`;

exports[`checkboxGroup > renders with valueKey correctly 1`] = `
"<div tabindex="0" data-orientation="vertical" dir="ltr" style="outline-color: none; outline-style: none; outline-width: initial;" id="v-0-0" data-pohon="checkbox-group-root">
  <fieldset data-pohon="checkbox-group-fieldset">
    <!--v-if-->
    <div class="" data-pohon="checkbox-root">
      <div class="" data-pohon="checkbox-container"><button tabindex="-1" data-orientation="vertical" data-pohon="checkbox-base" id="v-0-0:Option 1" role="checkbox" type="button" aria-checked="false" aria-required="false" data-state="unchecked" data-akar-collection-item="">
          <!---->
          <!--v-if-->
        </button></div>
      <div class="" data-pohon="checkbox-wrapper"><label for="v-0-0:Option 1" class="" data-pohon="checkbox-label">Option 1</label>
        <!--v-if-->
      </div>
    </div>
    <div class="" data-pohon="checkbox-root">
      <div class="" data-pohon="checkbox-container"><button tabindex="-1" data-orientation="vertical" data-pohon="checkbox-base" id="v-0-0:Option 2" role="checkbox" type="button" aria-checked="false" aria-required="false" data-state="unchecked" data-akar-collection-item="">
          <!---->
          <!--v-if-->
        </button></div>
      <div class="" data-pohon="checkbox-wrapper"><label for="v-0-0:Option 2" class="" data-pohon="checkbox-label">Option 2</label>
        <!--v-if-->
      </div>
    </div>
    <div class="" data-pohon="checkbox-root">
      <div class="" data-pohon="checkbox-container"><button tabindex="-1" data-orientation="vertical" data-pohon="checkbox-base" id="v-0-0:Option 3" role="checkbox" type="button" aria-checked="false" aria-required="false" data-state="unchecked" data-akar-collection-item="">
          <!---->
          <!--v-if-->
        </button></div>
      <div class="" data-pohon="checkbox-wrapper"><label for="v-0-0:Option 3" class="" data-pohon="checkbox-label">Option 3</label>
        <!--v-if-->
      </div>
    </div>
  </fieldset>
  <!--v-if-->
</div>"
`;
